--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           <h2>Mamba</h2>
           <p>A108 Adam Street
             NY 535022, USA</p>
-          <h6>Phone: +1 5589 55488 55 <br>
+          <h6>Phone: +1 5589 558 551 <br><br>
             Email: info@example.com
           </h6>
           <div class="social">
