--- a/index.html
+++ b/index.html
@@ -232,68 +232,67 @@
         </div>
 
         <div class="row counting">
-            <div class="col-md-3 counters">
-                <div class="timer" data-target="232">0</div>
-                <p class="clients">Happy Clients</p>
-            </div>
-            <div class="col-md-3 counters1">
-                <div class="timer" data-target="521">0</div>
-                <p class="clients1">Projects</p>
-            </div>
-            <div class="col-md-3 counters2">
-                <div class="timer" data-target="1463">0</div>
-                <p class="clients">Hours of Support</p>
-            </div>
-            <div class="col-md-3 counters3">
-                <div class="timer" data-target="100">0</div>
-                <p class="clients">Hard Workers</p>
-            </div>
+          <div class="col-md-3 counters">
+              <div class="timer" data-target="232">0</div>
+              <p class="clients">Happy Clients</p>
+          </div>
+          <div class="col-md-3 counters1">
+              <div class="timer" data-target="521">0</div>
+              <p class="clients1">Projects</p>
+          </div>
+          <div class="col-md-3 counters2">
+              <div class="timer" data-target="1463">0</div>
+              <p class="clients">Hours of Support</p>
+          </div>
+          <div class="col-md-3 counters3">
+              <div class="timer" data-target="100">0</div>
+              <p class="clients">Hard Workers</p>
+          </div>
         </div>
 
         <div class="row services">
-            <h1 class="text-center heading">Services</h1>
-            <div class="col-md-4 icons icons21">
-                <i class="far fa-comment-dots message1"></i>
-                <h5 class="lorem2">Lorem Ipsum</h5>
-                <span class="underline"></span>
-                <p class="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
-            </div>
-            <div class="col-md-4 icons icons22">
-                <i class="fa fa-network-wired network network"></i>
-                <h5 class="lorem1">Lorem Ipsum</h5>
-                <span class="underline1"></span>
-                <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
-            </div>
-            <div class="col-md-4 icons1 icons23">
-                <i class="fa fa-globe message"></i>
-                <h5 class="lorem">Lorem Ipsum</h5>
-                <span class="underline2"></span>
-                <p class="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
-            </div>
+          <h1 class="text-center heading">Services</h1>
+          <div class="col-md-4 icons icons21">
+            <i class="far fa-comment-dots message1"></i>
+            <h5 class="lorem2">Lorem Ipsum</h5>
+            <span class="underline"></span>
+            <p class="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
+          </div>
+          <div class="col-md-4 icons icons22">
+            <i class="fa fa-network-wired network"></i>
+            <h5 class="lorem1">Lorem Ipsum</h5>
+            <span class="underline1"></span>
+            <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
+          </div>
+          <div class="col-md-4 icons1 icons23">
+            <i class="fa fa-globe message"></i>
+            <h5 class="lorem">Lorem Ipsum</h5>
+            <span class="underline2"></span>
+            <p class="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
+          </div>
         </div>
 
 
         <div class="row services">
           <div class="col-md-4 icons icons24">
-              <i class="fa fa-tower-broadcast message1"></i>
-              <h5 class="lorem2">Lorem Ipsum</h5>
-              <span class="underline"></span>
-              <p class="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
+            <i class="fa fa-tower-broadcast message1 message222"></i>
+            <h5 class="lorem2 lorem222">Lorem Ipsum</h5>
+            <span class="underline"></span>
+            <p class="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
           </div>
           <div class="col-md-4 icons icons25">
-              <i class="fa fa-network-wired network"></i>
-               <!-- <i class="fa fa-sun-o network"></i> -->
-              <h5 class="lorem1">Lorem Ipsum</h5>
-              <span class="underline1"></span>
-              <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
+            <i class="fa fa-network-wired network network222"></i>
+            <h5 class="lorem1">Lorem Ipsum</h5>
+            <span class="underline1"></span>
+            <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
           </div>
           <div class="col-md-4 icons1 icons26">
-              <i class="fa fa-globe message"></i>
-              <h5 class="lorem">Lorem Ipsum</h5>
-              <span class="underline2"></span>
-              <p class="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
+            <i class="fa fa-globe message message212"></i>
+            <h5 class="lorem">Lorem Ipsum</h5>
+            <span class="underline2"></span>
+            <p class="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex rerum sapiente illum nam aspernatur quo, vero numquam.</p>
           </div>
-      </div>
+        </div>
 
       <div class="row portfolio">
         <h1 class="text-center heading1">Our Portfolio</h1>
