--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -14,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    <script>
+  <script>
     document.addEventListener('DOMContentLoaded', () => {
     const counters = document.querySelectorAll('.timer');
     const speed = 3000; // Total duration for the animation in milliseconds
@@ -50,7 +49,7 @@
     counters.forEach(counter => {
         observer.observe(counter);
     });
-});
+  });
   </script>
 
 
@@ -324,26 +323,22 @@
       <h1 class="text-center heading1">Our Portfolio</h1>
     </div>
     <div class="row buttons" id="myBtnContainer">
-      <!-- <button class="filter-button all mx-2" data-filter="all">All</button>
-      <button class="filter-button app mx-2" data-filter="app">App</button>
-      <button class="filter-button cards mx-2" data-filter="card">Card</button>
-      <button class="filter-button web mx-2" data-filter="web">Web</button> -->
-
       <button class="btn active all" onclick="filterSelection('all')"> All</button>
       <button class="btn app" onclick="filterSelection('app')"> App</button>
       <button class="btn cards" onclick="filterSelection('card')"> Card</button>
       <button class="btn web" onclick="filterSelection('web')"> Web</button>
-    
     </div>
 
     <div class="row projects1">
       <div class="filterDiv col pro1 app all">
-        <img src="headphone.png" alt="" class="headphone">
-        <div class="description">
-          <h6 class="text-white fw-bold desc1">App1</h6>
-          <span>APP</span>
-          <button class="styling"> <a href=""> <i class="fa fa-plus"></i> </a> </button>
-          <button class="styling1"> <a href=""> <i class="fa fa-link"></i>  </a> </button>
+        <div class="image-container">
+          <img src="headphone.png" alt="" class="headphone">
+          <div class="description">
+            <h6 class="text-white fw-bold desc1">App1</h6>
+            <span>APP</span>
+            <button class="styling"> <a href=""> <i class="fa fa-plus"></i> </a> </button>
+            <button class="styling1"> <a href=""> <i class="fa fa-link"></i>  </a> </button>
+          </div>
         </div>
       </div>
       <div class="filterDiv col pro2 web all">
